bundled_metadata/force-app/main/default/objects/User/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L1_Channel</valueSetName>
    </valueSet>
</CustomField>