bundled_metadata/force-app/main/default/objects/User/fields/DriverID__c.field-meta.xml
<CustomField>
    <fullName>DriverID__c</fullName>
    <label>Driver ID</label>
    <relationshipName>Drivers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>