bundled_metadata/force-app/main/default/objects/User/fields/GPID__c.field-meta.xml
<CustomField>
    <fullName>GPID__c</fullName>
    <label>GPID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>