bundled_metadata/force-app/main/default/objects/User/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back-Office</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Pre-Seller</fullName>
            </value>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Teleseller</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>WDR</fullName>
            </value>
            <value>
                <fullName>System Admin</fullName>
            </value>
	    <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>AFH Customer</fullName>
            </value>
            <value>
                <fullName>AFH Content Editor</fullName>
            </value>
            <value>
                <fullName>AFH Representative</fullName>
            </value>
            <value>
                <fullName>AFH Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>