bundled_metadata/force-app/main/default/objects/User/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFH</fullName>
            </value>
            <value>
                <fullName>SFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>