bundled_metadata/force-app/main/default/objects/User/fields/User_End_Date_Assignment__c.field-meta.xml
<CustomField>
    <fullName>User_End_Date_Assignment__c</fullName>
    <label>User End Date Assignment</label>
    <type>DateTime</type>
</CustomField>