bundled_metadata/force-app/main/default/objects/User/fields/User_Start_Date_Assignment__c.field-meta.xml
<CustomField>
    <fullName>User_Start_Date_Assignment__c</fullName>
    <label>User Start Date Assignment</label>
    <type>DateTime</type>
</CustomField>